Ticket #102 - Prevent weird line breaks in blog.

--- a/Plugins/Blog/Views/Frontend/__assets/scss/_content.scss
+++ b/Plugins/Blog/Views/Frontend/__assets/scss/_content.scss
@@ -1,3 +1,19 @@
 .blog-content {
+    .blog-post-content {
+        .ql-align-justify img {
+            width: 100%;
+        }
+    }
+}
 
+
+@media screen and (min-width: $screen-medium) {
+    .blog-content {
+        .blog-post-content {
+            .ql-align-justify img {
+                width: auto;
+                max-width: 66.66666%;
+            }
+        }
+    }
 }
